hphp/test/zend/good/Zend/tests/class_name_as_scalar_error_002.php.expectf
Fatal error: Expected constant expression for initializer in %s/test/zend/good/Zend/tests/class_name_as_scalar_error_002.php on line 5
